--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+<link rel="icon" type="image/png" href="favicon.png">
 <title>8 honour isekai</title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <style>
@@ -465,6 +466,7 @@ const roleColor = role => {
     case 'Support': return getCssVar('--support');
     case 'Tank': return getCssVar('--tank');
     case 'Hybrid': return getCssVar('--hybrid');
+
     default: return getCssVar('--hybrid');
   }
 };
