--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <div class="brand">
       <div class="logo">GN</div>
       <div>
-        <h1>Galactic Neon — Ultimate Character Roster</h1>
-        <div class="sub">Sleek view — click a card for full details.</div>
+        <h1>8honour isekai'd — Ultimate Character Roster</h1>
+        <div class="sub">Click a card for full details of my friendly classmates alternate persona in another world.</div>
       </div>
     </div>    
   </header>
