--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   :root{
     --bg-1:#020217;
     --bg-2:#071034;
-    --card:#0b1220;
-    --muted:#9fb3c8;
+    --card:#ffffff;
+    --muted:#fbfdff;
     --text:#e8f4ff;
     --glass: rgba(255,255,255,0.03);
     --radius:14px;
