--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
   <header>
     <div class="brand">
-      <div class="logo">GN</div>
+      <div class="logo"8h</div>
       <div>
         <h1>8honour isekai'd — Ultimate Character Roster</h1>
         <div class="sub">Click a card for full details of my friendly classmates alternate persona in another world.</div>
