--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ const heroes = {
 
  "Gregory": {race:"Celestial (Half-Angel)", role:"Hero", title:"Divine Hero",
     melee:"Lumisblade — a radiant sword forged from condensed light, capable of cutting through darkness and purifying corruption.",
-    passives:["Hero’s Resolve — Damage increases when protecting allies or standing against evil.","Divine Presence — Naturally boosts allies’ morale and weakens nearby enemies through sheer aura."],
+    passives:["Hero\'s Resolve — Damage increases when protecting allies or standing against evil.","Divine Presence — Naturally boosts allies\' morale and weakens nearby enemies through sheer aura."],
     stats:{Defense:19,Strength:18,Agility:17,Intelligence:18,Perception:18,"Magic Control":18,"Technique Control":18},
     ultimate:"Judgment Ascension — Gregory rises skyward, summoning a pillar of celestial light that rains down holy blasts across the battlefield, obliterating evil and restoring allies caught in the glow."
 },
