--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@ const heroes = {
 
  "Joshua": {race:"Human (Divinely Blessed)", role:"Healer", title:"Luminary Priest",
     melee:"Staff of Sanctus — manifests from divine light, glowing brighter the purer his intent.",
-    abilities:[["Divine Light","Celestial energy disintegrates corruption and curses."],["Solar Restoration","Channels divine energy into others to heal and purify."],["Judgment Ray","Calls down a concentrated beam of holy radiance."],["Blessed Radiance","Aura that weakens dark magic and strengthens allies."]],
-    passives:["Child of Light — Divine energy constantly regenerates him, no matter the wound.","Faith Unbroken — Immune to corruption, fear, and possession; light only shines brighter in darkness."],
+    abilities:[["Divine Light","Emits pure celestial energy that disintegrates corruption, curses, and shadows; the stronger his faith, the brighter the light burns."],["Solar Restoration","Channels divine energy into others, healing wounds and purifying souls instantly."],["Judgment Ray","Calls down a concentrated beam of holy radiance from the heavens, smiting enemies marked by sin or malice."],["Blessed Radiance","His mere presence emits an aura that weakens dark magic and boosts ally morale."]],
+    passives:["Child of Light — His power never fades; even when drained or wounded, divine energy naturally regenerates him.","Faith Unbroken — Immune to corruption, fear, and possession. The stronger the darkness he faces, the brighter his light shines.","Holy Insight — Can sense the true nature of beings, detecting lies, illusions, or hidden darkness."],
     stats:{Defense:12,Strength:12,Agility:13,Intelligence:19,Perception:18,"Magic Control":20,"Technique Control":20},
-    ultimate:"Genesis Halo — Joshua becomes a conduit of divine will, flooding the battlefield with sanctified light that heals allies, weakens enemies, and reshapes the terrain into holy ground."
+    ultimate:"Genesis Halo — Joshua becomes a conduit of divine will. A massive halo forms in the sky, flooding the battlefield with sanctified light that blinds evil, restores life, and reshapes the ground into holy soil. For one minute, he is the Light itself — untouchable, unstoppable, and absolute."
 },
 
 
