--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ const heroes = {
 },
 
   "Mario": {race: "Beastman (Wolf Type)", role: "Tank", title: "Tactical Commander",
-  melee: "Cybernetic Gauntlets — enhanced for both brutal punches and gadget-assisted strikes; can amplify force, shock, or grapple enemies. Combat Style: Expert frontline fighter combining animal instincts with military training; strikes fast, reads the battlefield, and adapts mid-combat.",
+  melee: "Cybernetic Gauntlets — enhanced for both brutal punches and gadget-assisted strikes; can amplify force, shock, or grapple enemies.",
   abilities: "Animal Instinct — heightened senses & reflexes; Weapon Utilization — mastery over any weapon; Overdrive Assault — adrenaline boost to stats; Tactical Coordination — enhances allies’ efficiency.",
   passives: "Savage Core — stronger at low HP; Beast Reflexes — auto dodges in range; Military Discipline — boosted endurance & focus.",
   stats: { Defense: 17, Strength: 18, Agility: 18, Intelligence: 16, Perception: 19, "Magic Control": 10, "Technique Control": 18 },
