--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ const heroes = {
 
   "Mario": {race: "Beastman (Wolf Type)", role: "Tank", title: "Tactical Commander",
   melee: "Cybernetic Gauntlets — enhanced for both brutal punches and gadget-assisted strikes; can amplify force, shock, or grapple enemies.",
-  abilities: "Animal Instinct — heightened senses & reflexes; Weapon Utilization — mastery over any weapon; Overdrive Assault — adrenaline boost to stats; Tactical Coordination — enhances allies’ efficiency.",
+  abilities: "Animal Instinct — Heightened senses and reflexes; detects danger, predicts enemy movements, and reacts instantly with inhuman precision; Weapon Utilization — Instantly masters any weapon; adapts attacks to enemies, terrain, and combat flow.; Overdrive Assault — Adrenaline surge boosts all physical stats; moves faster, hits harder, fights like a storm.; Tactical Coordination — Leads allies with perfect timing; boosts teamwork, precision, and combat efficiency.",
   passives: "Savage Core — stronger at low HP; Beast Reflexes — auto dodges in range; Military Discipline — boosted endurance & focus.",
   stats: { Defense: 17, Strength: 18, Agility: 18, Intelligence: 16, Perception: 19, "Magic Control": 10, "Technique Control": 18 },
   ultimate: "Lunar Assault — taps full Beastman instincts and military expertise, gaining immense strength, speed, and perception for 30 seconds with devastating blitz attacks."
